<resources>
    <string name="app_name">Restaurants</string>
    <string name="email_address">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="signIn">Sign In</string>
    <string name="login_msg">Please enter your email and password below to start using app.</string>
    <string name="login_welcome_msg">Welcome to RestaurantsApp</string>
    <string name="join_now">Join now</string>
    <string name="not_a_member">Not a member?</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_now">Register now</string>
    <string name="logo">logo</string>
    <string name="profile_picture">Profile picture</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="rating">Rating</string>
    <string name="set_your_new_password">Set your new password</string>
    <string name="continue_to_login">Continue</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="see_on_map">See on map</string>
    <string name="get_me_there">Get me there!</string>
    <string name="image">image</string>
    <string name="get_more_information">Get more information</string>
    <string name="placeholder">Placeholder</string>
    <string name="placeholder2">9.21</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>

    <string-array name="foodPreference">
        <item>Choose food preference</item>
        <item>Wine</item>
        <item>Italian</item>
        <item>Pizza</item>
        <item>Dessert</item>
        <item>Steak</item>
        <item>Japanese</item>
        <item>Indian</item>
        <item>Thai</item>
    </string-array>

</resources>