<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iLogo"
        android:layout_width="322dp"
        android:layout_height="287dp"
        android:layout_marginTop="4dp"
        android:contentDescription="appLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/borders"
        android:drawableStart="@drawable/user1"
        android:drawablePadding="15dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/secondaryLightColor"

        android:textCursorDrawable="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/iLogo"
        app:layout_constraintStart_toStartOf="@+id/iLogo"
        app:layout_constraintTop_toBottomOf="@+id/iLogo"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/borders"
        android:drawableStart="@drawable/padlock"
        android:drawableEnd="@drawable/hidden_psw"
        android:drawablePadding="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/primaryTextColor"

        android:textColorHint="@color/secondaryLightColor"
        android:textCursorDrawable="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Buttons"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:fontFamily="serif-monospace"
        android:text="@string/signIn"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvLoginMsg"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login_msg"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome_msg"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/secondaryColor"
        app:layout_constraintBottom_toTopOf="@+id/tvLoginMsg"
        app:layout_constraintStart_toStartOf="@+id/tvLoginMsg" />

    <TextView
        android:id="@+id/tvRegisterCheck"
        android:layout_width="230dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:text="@string/not_a_member"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:layout_width="230dp"
        android:layout_height="26dp"
        android:layout_marginStart="170dp"
        android:text="@string/join_now"
        android:textSize="16sp"
        android:textColor="@color/orange"
        android:textStyle="italic"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/tvRegisterCheck"
        app:layout_constraintStart_toStartOf="@+id/tvRegisterCheck"
        app:layout_constraintTop_toTopOf="@+id/tvRegisterCheck"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="131dp"
        android:layout_height="35dp"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="131dp"
        android:layout_height="35dp"
        android:text="@string/forgot_password"
        android:textColor="@color/orange"
        android:textAlignment="textEnd"
        android:padding="7dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>