<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnRegister"
        style="@style/Buttons"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_now"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sFoodPreference"
        app:layout_constraintStart_toStartOf="@+id/sFoodPreference"
        app:layout_constraintTop_toBottomOf="@+id/sFoodPreference"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:padding="7dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="#FFB300"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <EditText
        android:id="@+id/etPasswordRepeatR"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:background="@drawable/borders"
        android:drawablePadding="15dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"

        android:padding="15dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/purple"
        android:textCursorDrawable="@color/orange"
        app:layout_constraintStart_toStartOf="@+id/etPasswordR"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordR" />

    <EditText
        android:id="@+id/etPasswordR"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:background="@drawable/borders"
        android:drawablePadding="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/purple"
        android:textCursorDrawable="@color/orange"
        app:layout_constraintStart_toStartOf="@+id/etEmailR"
        app:layout_constraintTop_toBottomOf="@+id/etEmailR" />


    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textColor="@color/purple"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iLogo2" />

    <EditText
        android:id="@+id/etEmailR"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/borders"
        android:drawablePadding="15dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/purple"
        android:textCursorDrawable="@color/orange"
        app:layout_constraintStart_toStartOf="@+id/etLastName"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:background="@drawable/borders"
        android:drawablePadding="15dp"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/purple"
        android:textCursorDrawable="@color/orange"
        app:layout_constraintStart_toStartOf="@+id/tvCreate"
        app:layout_constraintTop_toBottomOf="@+id/tvCreate" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:background="@drawable/borders"
        android:drawablePadding="15dp"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/primaryTextColor"
        android:textColorHint="@color/purple"
        android:textCursorDrawable="@color/orange"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <ImageView
        android:id="@+id/iLogo2"
        android:layout_width="145dp"
        android:layout_height="133dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoonly" />

    <Spinner
        android:id="@+id/sFoodPreference"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/borders"
        android:spinnerMode="dropdown"
        android:padding="15dp"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="@+id/etPasswordRepeatR"
        app:layout_constraintStart_toStartOf="@+id/etPasswordRepeatR"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordRepeatR" />


</androidx.constraintlayout.widget.ConstraintLayout>